timeline/src/App.css
.App {
  text-align: center;
  display: table;
  width: 100%;
  height: 100%;;
}
.App-logo {
  height: 40vmin;
  pointer-events: none;
}
.scroll-button{
  background-color: black;
  background:grey;
}
.
.profile {
  height: 70%;
}
.profile_bio{
  position: relative;
  margin-top: 25%;
}
.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}
.main-nav {
  font-family: Arial, sans-serif;
  margin: 0 25%;
  float: left;
}

.logo-style {
  float: left;
  animation: App-logo-spin infinite 20s linear;
}
.hero-greet {
  opacity: 1;
  background: transparent;
}
body,
html {
  height: 100%;
  width: 100%;
}
.hero-image {
  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("./Media/Pre-WWII/Abram.Baigelman035.jpeg");

  /* Set a specific height */
  height: 50%;

  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.landing {
  opacity: 1;
  background: transparent;
}
.back {
  opacity: 1;
  background: transparent;
}

.App-link {
  color: #61dafb;
}
.slide-container {
  width: 100%;
  margin: auto;
}

h3 {
  text-align: center;
}
.profile_title{
  font-family: 'Times New Roman', Times, serif;
}

.single_photo{
  width: 600px;
  height: 500px;
  margin-right: 20%;
}
.each-slide > div {
  display: block;
  margin-left: auto;
  margin-right: auto;
  align-items: center;
  justify-content: center;
  background-size: cover;
  height: 500px;
  width: 500px;
}

.each-slide span {
  font-size: 15px;
  text-align: justify;
}

.each-fade {
  display: flex;
}

.each-fade .image-container {
  width: 100%;
  overflow: hidden;
}

.each-fade .image-container img {
  width: 100%;
}

.each-fade h2 {
  width: 25%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
}
.Popup {
  float: right;
}

.vertical-timeline::before {
  background: grey;
}
* {
  margin: 0;
  padding: 0;
}

.tree ul {
  padding-top: 20px;
  position: relative;

  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}

.tree li {
  float: left;
  text-align: center;
  list-style-type: none;
  position: relative;
  padding: 20px 0.5px 0 5px;

  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
.tree-photo {
  position: relative;
  width: 150px;
  height: 150px;
  border-radius: 50%;
}

/*We will use ::before and ::after to draw the connectors*/

.tree li::before,
.tree li::after {
  content: "";
  position: absolute;
  top: 0;
  right: 50%;
  border-top: 5px solid #ccc;
  width: 50%;
  height: 45px;
  z-index: -1;
}
.tree li::after {
  right: auto;
  left: 50%;
  border-left: 5px solid #ccc;
}

/*We need to remove left-right connectors from elements without 
		any siblings*/
.tree li:only-child::after,
.tree li:only-child::before {
  display: none;
}

/*Remove space from the top of single children*/
.tree li:only-child {
  padding-top: 0;
}

/*Remove left connector from first child and 
		right connector from last child*/
.tree li:first-child::before,
.tree li:last-child::after {
  border: 0 none;
}
/*Adding back the vertical connector to the last nodes*/
.tree li:last-child::before {
  border-right: 5px solid #ccc;
  border-radius: 0 5px 0 0;

  -webkit-transform: translateX(1px);
  -moz-transform: translateX(1px);
  transform: translateX(1px);

  -webkit-border-radius: 0 5px 0 0;
  -moz-border-radius: 0 5px 0 0;
  border-radius: 0 5px 0 0;
}
.tree li:first-child::after {
  border-radius: 5px 0 0 0;
  -webkit-border-radius: 5px 0 0 0;
  -moz-border-radius: 5px 0 0 0;
}

/*Time to add downward connectors from parents*/
.tree ul ul::before {
  content: "";
  position: absolute;
  top: -12px;
  left: 50%;
  border-left: 5px solid #ccc;
  width: 0;
  height: 32px;
  z-index: -1;
}

.tree li a {
  border: 5px solid #ccc;
  padding: 5px 10px;
  text-decoration: none;
  color: #666;
  font-family: arial, verdana, tahoma;
  font-size: 11px;
  display: inline-block;
  background: white;

  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;

  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
  transition: transform .2s; /* Animation */
}

.tree li a + a {
  margin-left: 20px;
  position: relative;
}
.tree li a + a::before {
  content: "";
  position: absolute;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #8b0000;
  top: 50%;
  left: -21px;
  width: 20px;
}
body#archive .footer{
  display: none;
}

/*Time for some hover effects*/
/*We will apply the hover effect the the lineage of the element also*/
.tree li a:hover,
.tree li a:hover ~ ul li a {
  background: #c8e4f8;
  color: #000;
  border: 1px solid #94a0b4;
}
/*Connector styles on hover*/
.tree li a:hover ~ ul li::after,
.tree li a:hover ~ ul li::before,
.tree li a:hover ~ ul::before,
.tree li a:hover ~ ul ul::before {
  border-color: #94a0b4;
}
input[type=checkbox] {
  display: none;
}
.no-shadows {
    box-shadow: none!important;
}
.container{
  margin-top: 2%;
  padding-top: 2%;
}
.container img {

  margin: 100px;
  transition: transform 0.25s ease;
  cursor: zoom-in;
}

input[type=checkbox]:checked ~ label > img {
  transform: scale(2);
  cursor: zoom-out;
}

.tree-wrapper {
  display: inline-block;
  min-height: 500px;
  width: 13000px;
  transform: scale(0.075);
  transform-origin: 0% 2% 0px;
  overflow-x: scroll;
  overflow-y: hidden;
  margin-left:100px;
  transition:transform 1s;

}
.tree {
  transition:transform 1s;
}
.tree-wrapper:hover {
  transform: scale(0.325);
}
.tree-profile{
      position:relative;
      width:250px;
      height: 250px;
      border-radius:50%;
    }
.tree-info{
  font-size: x-large;
  font-family: 'Times New Roman', Times, serif;
}
.navbar-header {
  border: #94a0b4;
  display:table-row;
  width:parent;
}

#scroll {
  background: grey;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

